force-app/main/default/objects/Travel_Expense_Policy__mdt/Travel_Expense_Policy__mdt.object-meta.xml
<CustomObject>
    <description>Configurable policy thresholds for travel and expense evaluation engine.</description>
    <label>Travel Expense Policy</label>
    <pluralLabel>Travel Expense Policies</pluralLabel>
</CustomObject>