force-app/main/default/objects/Travel_Expense_Policy__mdt/fields/Allowed_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Payment_Methods__c</fullName>
    <description>Permitted payment types, comma-delimited.</description>
    <label>Allowed Payment Methods</label>
    <length>100</length>
    <type>Text</type>
</CustomField>