force-app/main/default/objects/Travel_Expense_Policy__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Matching expense category.</description>
    <label>Category</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>