force-app/main/default/objects/Travel_Expense_Policy__mdt/fields/Daily_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_Limit__c</fullName>
    <description>Max allowable daily spend for this category.</description>
    <label>Daily Limit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>