force-app/main/default/objects/Travel_Expense_Policy__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active state of this rule.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>