force-app/main/default/objects/Travel_Expense_Policy__mdt/fields/Receipt_Required_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Required_Threshold__c</fullName>
    <description>Any expense above this amount requires a receipt attached.</description>
    <label>Receipt Required Threshold</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>