force-app/main/default/objects/Travel_Expense_Policy__mdt/fields/Requires_Manager_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Manager_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if this category always routes to human manager review.</description>
    <label>Requires Manager Review</label>
    <type>Checkbox</type>
</CustomField>