force-app/main/default/objects/Travel_Expense_Policy__mdt/fields/Single_Transaction_Limit__c.field-meta.xml
<CustomField>
    <fullName>Single_Transaction_Limit__c</fullName>
    <description>Max allowable single line item expense before triggering exception.</description>
    <label>Single Transaction Limit</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>